# ArmaGen

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml
loaders/xor_loader_fb0sh/: Cargo.toml  sc.txt
loaders/xor_loader_fb0sh/src/: armagen.rs  lib.rs  main.rs  obfuscator.rs  sc.rs  z.rs
src/: cli.rs  core.rs  lib.rs  main.rs
