[package]
name = "xor_loader_fb0sh"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.10"
rand = "0.8.5"
winapi = { version = "0.3.9", features = [
    "winuser",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "synchapi",
] }

[lib]
name = "armagen"
path = "src/lib.rs"
